--- a/.github/workflows/projeto_C214.yml
+++ b/.github/workflows/projeto_C214.yml
@@ -23,8 +23,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
+        cd vendas
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
       run: |
+        cd vendas
         python manage.py test
